# csi_fall_monorepo

./: .gitignore  ARCHITECTURE.md  DATA_PIPELINE.md  PIPELINE_USAGE.md  README.md  pyproject.toml
.claude/: settings.local.json
.dvc/: config
apps/infrastructure/: Dockerfile  pyproject.toml
apps/infrastructure/src/fall_sensing/infra/: __init__.py  mqtt_listener.py
apps/research/acf_cwt/: .dvcignore  Dockerfile  dvc.yaml  pyproject.toml
apps/research/acf_cwt/scripts/: feature_extraction.py  train.py  visualize.py
apps/research/acf_cwt/src/fall_sensing/research/: __init__.py  drift_monitor.py  train.py
apps/research/combined_feature/: .dvcignore  dvc.yaml  params.yaml  pyproject.toml
apps/research/combined_feature/scripts/: infer.py  preprocess.py  run_pipeline.py
apps/research/combined_feature/src/fall_sensing/research/: preprocess.py
apps/service/: Dockerfile  pyproject.toml
apps/service/src/fall_sensing/server/: __init__.py  main_api.py  materialized_cron.py
data/: .gitkeep
shared/: pyproject.toml
shared/src/fall_sensing/core/: __init__.py  feature.py  sanitization.py
