[project]
name = "fall-sensing-core"
version = "0.1.0"
description = "Shared CSI signal preprocessing and feature extraction core library"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pywavelets>=1.4.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fall_sensing"]
