[project]
name = "fall-sensing-infrastructure"
version = "0.1.0"
description = "MQTT listener, AWS IoT Core integration, and S3 Data Lake routing"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0.0",
    "boto3>=1.34.0",
    "fall-sensing-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fall_sensing"]

[tool.uv.sources]
fall-sensing-core = { workspace = true }
