[project]
name = "fall-sensing-service"
version = "0.1.0"
description = "FastAPI REST backend and materialized view cron job"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.4.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "fall-sensing-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fall_sensing"]

[tool.uv.sources]
fall-sensing-core = { workspace = true }
